<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">
<!--    半透明罩层-->
    <View
        android:id="@+id/overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#80000000"
    android:visibility="gone" />

    <ImageView
        android:id="@+id/top_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/bg_splash"
        android:scaleType="fitXY"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:alpha="0.2"/>

    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="273.9dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/icon_app" />

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/string_littleGame_splash"
        android:textAppearance="@style/style_app_name"
        />

    <TextView
        android:id="@+id/app_slogan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="0.4"
        android:gravity="center"
        android:layout_below="@id/app_name"
        android:layout_centerHorizontal="true"
        android:text="@string/string_app_slogan"
        android:textAppearance="@style/style_text2_splash" />

    <RelativeLayout
        android:id="@+id/privacy_layout"
        android:layout_width="260dp"
        android:layout_height="242.33dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/bg_rounded"
        android:visibility="gone">

            <TextView
                android:id="@+id/tv_terms_and_conditions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="@string/string_tv_content"
                android:textAppearance="@style/style_tv_terms_and_conditions"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/tv_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_terms_and_conditions"
                android:layout_centerHorizontal="true"
                android:text="@string/string_tv_terms_and_conditions"
                android:textAppearance="@style/style_tv_content"
                android:layout_margin="16.67dp"
                android:gravity="top"
                />

            <Button
                android:id="@+id/btn_disagree"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_content"
                android:text="@string/string_disagree"
                />

            <Button
                android:id="@+id/btn_agree_and_use"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/btn_disagree"
                android:text="@string/string_agree_and_use"
                />



    </RelativeLayout>



</RelativeLayout>
